--- a/tindex.css
+++ b/tindex.css
@@ -1,6 +1,6 @@
 body {
 
-    background-image: url('new-york.jpg');  
+    background-image: url('pexels-vladalex94-1486222.jpg');  
     /* For id you use hashtage and for class use dot operator */
     
         background-size: cover;
@@ -8,12 +8,15 @@ body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-weight: bold;
         text-align: center;
+        height: 100vh;
+
 }
 
 
 h1 {
     margin-top: 10px;
     margin-bottom: 10px;
+    font-size: 100px;
 }
 
 h2 {
@@ -31,16 +34,31 @@ button {
     width: 200px;
     margin-bottom: 5px;
     border-radius: 5px;
+    font-size: 2rem;
+
 }
 
 #increment-btn {
     background: darkred;
+
 }
 
 #save-btn {
     background: darkgreen;
+    
+
 }
 
 .image-citation{
 font-size: 10px;
 }
+
+#count-el{
+    font-size: 100px;
+}
+
+
+#save-el{
+    font-size: 55px;
+}
+
